gitops/apps/alarik/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: alarik
  labels:
    name: alarik
